# rosbag-uploader-ros1

./: .codecov.yml  .gitignore  .rosinstall  .travis.yml  CONTRIBUTING.md  NOTICE  README.md  install_linters.sh  kinetic.ignored  lint.sh  melodic.ignored
.github/: dependabot.yml
.github/actions/clang-tidy/: .clang-format  README.md  action.yml  clang-tidy-verify.py  package-lock.json  package.json
.github/actions/clang-tidy/src/: clang-tidy.ts
.github/actions/cw-build-status/: .eslintrc.json  README.md  action.yml  package-lock.json  package.json
.github/actions/cw-build-status/src/: cw-build-status.ts
.github/actions/ros1-ci/: .eslintrc.json  Dockerfile  README.md  action.yml  package-lock.json  package.json
.github/actions/ros1-ci/scripts/: build.sh
.github/actions/ros1-ci/src/: ros1-ci.ts
.github/actions/ros1-integ-test/: action.yml  package-lock.json  package.json
.github/actions/ros1-integ-test/src/: ros1-integ-test.ts
.github/actions/setup-ros1/: README.md  action.yml  package-lock.json  package.json
.github/actions/setup-ros1/src/: setup-ros1.ts
.github/workflows/: autoapprove.yml  automerge.yml  build_and_test.yml  build_and_test_release_latest.yml  lint.yml  main.yml  release_latest.repos  repo-activity.yml
demo/: CMakeLists.txt  package.xml
demo/src/: main.cpp
examples/: recorder_client.py  s3_file_uploader_client.py
file_uploader_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
file_uploader_msgs/action/: UploadFiles.action
file_uploader_msgs/msg/: S3Result.msg  UploaderResult.msg
integ-tests/configurations/: config.yaml
integ-tests/tests/: test_rosbag_uploader_ros1.py
integ_tests/: CHANGELOG.rst  CMakeLists.txt  README.md  melodic.ignored  package.xml
integ_tests/configurations/: config.yaml  rolling_recorder_config.yaml
integ_tests/launch/: test_duration_recorder_general.test  test_periodic_file_deleter.test  test_rolling_recorder.test  test_rolling_recorder_custom_topic.test  test_rolling_recorder_default_topics.test  test_rolling_recorder_upload.test  test_rosbag_uploader_ros1.test  test_s3_file_uploader_general.test  test_s3_file_uploader_wrong_region.test
integ_tests/scripts/: setup_test_bucket.sh
integ_tests/tests/: duration_recorder_test_base.py  file_helpers.py  rolling_recorder_test_base.py  s3_client.py  s3_file_uploader_test_base.py  test_duration_recorder_general.py  test_periodic_file_deleter.py  test_rolling_recorder.py  test_rolling_recorder_custom_topic.py  test_rolling_recorder_default_topics.py  test_rolling_recorder_upload.py  test_rosbag_uploader_ros1.py  test_s3_file_uploader.py  test_s3_file_uploader_general.py  test_s3_file_uploader_wrong_region.py
recorder_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
recorder_msgs/action/: DurationRecorder.action  RollingRecorder.action
recorder_msgs/msg/: RecorderResult.msg  RecorderStatus.msg
rosbag_cloud_recorders/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rosbag_cloud_recorders/config/: duration_recorder_sample_configuration.yaml  rolling_recorder_sample_configuration.yaml
rosbag_cloud_recorders/include/: recorder_common_error_codes.h
rosbag_cloud_recorders/include/duration_recorder/: duration_recorder.h
rosbag_cloud_recorders/include/rolling_recorder/: rolling_recorder.h
rosbag_cloud_recorders/include/rosbag_cloud_recorders/: recorder_common_error_codes.h
rosbag_cloud_recorders/include/rosbag_cloud_recorders/duration_recorder/: duration_recorder.h  duration_recorder_action_server_handler.h
rosbag_cloud_recorders/include/rosbag_cloud_recorders/rolling_recorder/: rolling_recorder.h  rolling_recorder_action_server_handler.h
rosbag_cloud_recorders/include/rosbag_cloud_recorders/utils/: file_utils.h  periodic_file_deleter.h  recorder.h  rosbag_recorder.h  s3_client_utils.h
rosbag_cloud_recorders/include/utils/: rosbag_file_manager.h
rosbag_cloud_recorders/launch/: duration_recorder.launch  duration_recorder_sample.launch  rolling_recorder.launch  rolling_recorder_sample.launch
rosbag_cloud_recorders/src/duration_recorder/: duration_recorder.cpp  main.cpp
rosbag_cloud_recorders/src/rolling_recorder/: main.cpp  rolling_recorder.cpp
rosbag_cloud_recorders/src/utils/: file_utils.cpp  periodic_file_deleter.cpp  recorder.cpp  rosbag_file_manager.cpp  rosbag_recorder.cpp  s3_client_utils.cpp
rosbag_cloud_recorders/test/: duration_recorder_action_server_handler_test.cpp  duration_recorder_test.cpp  rolling_recorder_action_server_handler_test.cpp  rolling_recorder_test.cpp  test_duration_recorder.test  test_duration_recorder_action_server_handler.test  test_rolling_recorder.test  test_rolling_recorder_action_server_handler.test  utils_test.cpp
rosbag_cloud_recorders/test/utils/: file_utils_test.cpp  periodic_file_deleter_test.cpp  rosbag_recorder.cpp  utils_test.cpp
rosbag_recorders/: CMakeLists.txt  package.xml
rosbag_recorders/include/: recorder_common_error_codes.h
rosbag_recorders/include/duration_recorder/: duration_recorder.h
rosbag_recorders/src/duration_recorder/: duration_recorder.cpp  main.cpp
rosbag_recorders/test/: duration_recorder_test.cpp  test_duration_recorder.test
s3_common/: CHANGELOG.rst  CMakeLists.txt  package.xml  s3_commonConfig.cmake.in  s3_commonConfigVersion.cmake.in
s3_common/include/s3_common/: s3_common_error_codes.h  s3_facade.h  s3_upload_manager.h  utils.h
s3_common/src/: s3_facade.cpp  s3_upload_manager.cpp  utils.cpp
s3_common/test/: main_test.cpp  s3_common_test.cpp  s3_facade_test.cpp  s3_upload_manager_test.cpp  utils_test.cpp
s3_file_uploader/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
s3_file_uploader/config/: node_sample_configuration.yaml
s3_file_uploader/include/s3_file_uploader/: s3_file_uploader.h  s3_file_uploader_action_server_handler.h
s3_file_uploader/launch/: s3_file_uploader.launch
s3_file_uploader/src/: main.cpp  s3_file_uploader.cpp
s3_file_uploader/test/: s3_file_uploader_action_server_handler_test.cpp  s3_file_uploader_test.cpp  s3_file_uploader_test.hpp  test_s3_file_uploader.test
src/recorder_msgs/: CMakeLists.txt
