<?xml version="1.0"?>
<package format="2">
  <name>rosbag_uploader_ros1_integration_tests</name>
  <version>1.0.1</version>
  <description>End to end tests for rosbag-uploader-ros1 cloud extension package.</description>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <build_depend>python-boto3</build_depend>
  <build_depend>actionlib</build_depend>

  <exec_depend>python-boto3</exec_depend>
  <exec_depend>s3_file_uploader</exec_depend>
</package>
