<?xml version="1.0"?>
<package format="3">
  <name>rosbag_cloud_recorders</name>
  <version>1.0.1</version>
  <description>Package with nodes that facilitate the recording of rosbag files</description>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>aws_common</depend>
  <depend>aws_ros1_common</depend>
  <depend>boost</depend>
  <depend>file_uploader_msgs</depend>
  <depend>recorder_msgs</depend>
  <depend>rosbag_storage</depend>
  <depend>roscpp</depend>
  <depend>topic_tools</depend>
  <depend>xmlrpcpp</depend>

  <build_depend>roslint</build_depend>

  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>google-mock</test_depend>
</package>
