<?xml version="1.0"?>
<package format="3">
  <name>s3_common</name>
  <version>1.0.1</version>
  <description>Common utilities for interacting with AWS S3</description>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  
  <depend>aws_common</depend>
  <depend>boost</depend>

  <test_depend condition="$ROS_VERSION == 1">google-mock</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
